--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fluent_ui: ^4.3.0
   flutter:
     sdk: flutter
+  provider: ^6.0.5
   window_manager: ^0.3.0
 
 dev_dependencies:
