--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
   fluent_ui: ^4.3.0
   flutter:
     sdk: flutter
+  pasteboard: ^0.2.0
   provider: ^6.0.5
+  screen_capture_event: ^1.1.1
+  screen_capturer: ^0.1.3
+  screenshot_callback: ^2.0.3
   window_manager: ^0.3.0
 
 dev_dependencies:
