save function implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
   flutter:
     sdk: flutter
   pasteboard: ^0.2.0
+  path_provider: ^2.0.13
   provider: ^6.0.5
   screen_capture_event: ^1.1.1
   screen_capturer: ^0.1.3
+  screenshot: ^1.3.0
   screenshot_callback: ^2.0.3
+  screenshot_modes: ^1.0.1
   window_manager: ^0.3.0
 
 dev_dependencies:
